--- a/config/astralsorcery/mineralis_ritual.cfg
+++ b/config/astralsorcery/mineralis_ritual.cfg
@@ -9,28 +9,27 @@
 data {
     #  [default: [oreCoal;5200], [oreIron;2500], [oreGold;550], [oreLapis;140], [oreRedstone;700], [oreDiamond;180], [oreEmerald;100], [oreAluminum;600], [oreCopper;1100], [oreTin;1500], [oreLead;1000], [oreCertusQuartz;500], [oreNickel;270], [orePlatinum;90], [oreSilver;180], [oreMithril;1], [oreRuby;400], [oreSapphire;400], [oreUranium;550], [oreYellorite;560], [oreZinc;300], [oreSulfur;600], [oreOsmium;950]]
     S:data <
-        oreEntropyInfused;500
-        oreOrderInfused;500
-        oreIgnisInfused;500
-        oreAquaInfused;500
-        oreAerInfused;500
-        oreTerraInfused;500
-        oreAquamarine;700
-        oreDimensionalShard;50
-        oreAmber;200
-        oreSalt;400
-        oreSaltpeter;400
-        stoneMarble;600
-        stoneDiorite;800
-        stoneGranite;800
-        stoneAndesite;800
-        blockBiotite;700
-        oreRockSalt;400
-        stoneBasalt;800
-        sandstone;800
-        oreRockCrystal;50
-        oreLepidolite;1500
+        mineralisEntropyInfused;500
+        mineralisOrderInfused;500
+        mineralisIgnisInfused;500
+        mineralisAquaInfused;500
+        mineralisAerInfused;500
+        mineralisTerraInfused;500
+        mineralisAquamarine;700
+        mineralisDimensionalShard;50
+        mineralisAmber;200
+        mineralisSalt;400
+        mineralisSaltpeter;400
+        mineralisMarble;600
+        mineralisDiorite;800
+        mineralisGranite;800
+        mineralisAndesite;800
+        mineralisBiotite;700
+        mineralisBasalt;800
+        mineralisSandstone;800
+		mineralisRockCrystal;50
+		mineralisRockSalt;400
+		mineralisLepidolite;1500
      >
 }
-
 
