remote Orex and Twerk sim in favor of FTBUtilmine

--- a/config/apotheosis/enchantability.cfg
+++ b/config/apotheosis/enchantability.cfg
@@ -542,6 +542,12 @@
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 5]
     I:"artisanworktables:BONE"=5
 
+    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 6]
+    I:"artisanworktables:BORON"=6
+
+    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 20]
+    I:"artisanworktables:BORONNITRIDE"=20
+
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 15]
     I:"artisanworktables:BRONZE"=15
 
@@ -556,8 +562,6 @@
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 30]
     I:"artisanworktables:ELECTRUM"=30
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 20]
     I:"artisanworktables:ELEMENTIUM"=20
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 5]
@@ -565,6 +569,9 @@
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 22]
     I:"artisanworktables:GOLD"=22
+
+    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 12]
+    I:"artisanworktables:HARDCARBON"=12
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 16]
     I:"artisanworktables:INVAR"=16
@@ -574,12 +581,13 @@
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 9]
     I:"artisanworktables:LEAD"=9
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 20]
     I:"artisanworktables:MANASTEEL"=20
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 18]
     I:"artisanworktables:NICKEL"=18
+
+    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 12]
+    I:"artisanworktables:OSMIUM"=12
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 9]
     I:"artisanworktables:PLATINUM"=9
@@ -592,12 +600,13 @@
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 5]
     I:"artisanworktables:STONE"=5
-
-    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 26]
     I:"artisanworktables:TERRASTEEL"=26
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 7]
     I:"artisanworktables:TIN"=7
+
+    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 15]
+    I:"artisanworktables:TOUGHALLOY"=15
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 15]
     I:"artisanworktables:WOOD"=15
@@ -607,6 +616,12 @@
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 5]
     I:"athenaeum:BONE"=5
+
+    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 6]
+    I:"athenaeum:BORON"=6
+
+    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 20]
+    I:"athenaeum:BORONNITRIDE"=20
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 15]
     I:"athenaeum:BRONZE"=15
@@ -626,6 +641,9 @@
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 5]
     I:"athenaeum:FLINT"=5
 
+    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 12]
+    I:"athenaeum:HARDCARBON"=12
+
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 16]
     I:"athenaeum:INVAR"=16
 
@@ -637,6 +655,12 @@
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 18]
     I:"athenaeum:NICKEL"=18
+
+    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 18]
+    I:"athenaeum:OBSIDIAN"=18
+
+    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 12]
+    I:"athenaeum:OSMIUM"=12
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 9]
     I:"athenaeum:PLATINUM"=9
@@ -652,6 +676,9 @@
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 7]
     I:"athenaeum:TIN"=7
+
+    # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 15]
+    I:"athenaeum:TOUGHALLOY"=15
 
     # The enchantability of this tool material. [range: 0 ~ 2147483647, default: 50]
     I:bound=50
