--- a/config/cyclicmagic.cfg
+++ b/config/cyclicmagic.cfg
@@ -220,7 +220,7 @@ cyclicmagic {
         B:HarvesterBlock=false
 
         #  Set false to delete - requires restart [default: true]
-        B:"HeartContainer(food)"=false
+        B:"HeartContainer(food)"=true
 
         #  Set false to delete - requires restart [default: true]
         B:HorseFood=true
@@ -1441,7 +1441,7 @@ modpacks {
      >
 
     # Maximum number of heart containers you can get by eating heart containers.  Does not limit the /sethearts command [range: 10 ~ 100, default: 20]
-    I:HeartContainerMax=20
+    I:HeartContainerMax=10
 
     # Maximum number of upgraded hearts [range: 1 ~ 100, default: 20]
     I:"HorseFood Max Hearts"=20
