added more saplings to twerk whitelist

--- a/config/ftbultimine.cfg
+++ b/config/ftbultimine.cfg
@@ -32,13 +32,25 @@ general {
 
     # Min: 0.0
     # Max: 1.0
-    D:twerkChance=0.0
+    D:twerkChance=25
     B:twerkPlants=false
 
     # Min: 1
     # Max: 20
     I:twerkRadius=4
     S:twerkWhitelist <
+        gregtech:sapling
+        rustic:sapling
+        integrateddynamics:menril_sapling
+        thaumcraft:sapling_greatwood
+        wizardry:wisdom_sapling
+        thaumcraft:sapling_silverwood
+        plants2:crystal_sapling
+        rustic:sapling
+        rustic:sapling:1
+        tconstruct:slime_sapling
+        tconstruct:slime_sapling:1
+        tconstruct:slime_sapling:2
      >
 }
 
