--- a/config/simple_trophies.cfg
+++ b/config/simple_trophies.cfg
@@ -26,6 +26,9 @@ client {
         # (Requires a game restart in some cases.) [default: false]
         B:noTileEntitySpecialRenderer=false
 
+        # Emergency killswitch for trophies repeating their item's tooltip, in case one is crashing for whatever reason ('fancy' items tend to do things with their tooltip I can't properly catch) [default: false]
+        B:noTooltip=false
+
         # Don't show the items on top of trophies placed in the world. Saves on performance. [default: false]
         B:skipBlockItems=false
 
