add netherite gear to nerther dungeon chests
closes
https://github.com/FTBTeam/FTB-Interactions/issues/867

--- a/config/DLDungeonsJBG/SpecialChests/nether.cfg
+++ b/config/DLDungeonsJBG/SpecialChests/nether.cfg
@@ -101,11 +101,11 @@ gear, 5, animus:sigil_leech, 1, 1
 gear, 5, astralsorcery:itemarchitectwand, 1, 1
 gear, 5, randomthings:lavacharm, 1, 1
 
-gear, 6, minecraft:diamond_sword, 	1, 1
-gear, 6, minecraft:diamond_helmet,   	1, 1
-gear, 6, minecraft:diamond_leggings,  	1, 1
-gear, 6, minecraft:diamond_boots,  	1, 1
-gear, 6, minecraft:diamond_chestplate,  1, 1
+gear, 6, netherbackport:netheritesword, 	1, 1
+gear, 6, netherbackport:netheritearmorbody,   	1, 1
+gear, 6, netherbackport:netheritearmorlegs,  	1, 1
+gear, 6, netherbackport:netheritearmorboots,  	1, 1
+gear, 6, netherbackport:netheritearmorhelmet,  1, 1
 gear, 6, minecraft:arrow,              16, 48
 gear, 6, iceandfire:stymphalian_arrow,        	4, 8
 gear, 6, astralsorcery:itemusabledust,   	       2, 4
