--- a/config/cyclicmagic.cfg
+++ b/config/cyclicmagic.cfg
@@ -867,6 +867,8 @@ cyclicmagic {
 
         # Stardew Furnaces: Quickly fill a furnace by hitting it with fuel or an item, or interact with an empty hand to pull out the results [Inspired by Stardew Valley.  Left click only] [default: true]
         B:"Furnace Speed"=false
+
+        # Default modifier for heart containers a new player will start with when first joining the world.  Will not affect existing players once they have joined.  (For Maximum heart modifier limit given by the heart containers see 'modpacks' category in the config file) [range: -9 ~ 90, default: 0]
         I:HeartModifierInitial=0
 
         # Use a player skull on a sign to name the skull based on the top line [default: true]
@@ -1329,6 +1331,8 @@ cyclicmagic {
 
         # Fuel/Energy/RF cost to run machine [range: 0 ~ 500000, default: 99]
         I:dropper_exact=99
+
+        # Fuel/Energy/RF cost to run machine [range: 0 ~ 500000, default: 250]
         I:fire_starter=250
 
         # Fuel/Energy/RF cost to run machine [range: 0 ~ 500000, default: 500]
@@ -1448,6 +1452,8 @@ modpacks {
         croparia:stem_*
      >
     I:HeartContainerMax=10
+
+    # Maximum number of heart containers you can get by eating heart containers.  Does not limit the /setheartmod command [range: 0 ~ 90, default: 10]
     I:HeartModifierMax=10
 
     # Maximum number of upgraded hearts [range: 1 ~ 100, default: 20]
