--- a/config/DLDungeonsJBG/SpecialChests/ocean.cfg
+++ b/config/DLDungeonsJBG/SpecialChests/ocean.cfg
@@ -52,7 +52,7 @@ gear, 3, dmonsters:harpoon_diamond, 1, 1
 
 gear, 4, minecraft:iron_sword,   	1, 1
 gear, 4, actuallyadditions:item_sword_quartz, 	1, 1
-gear, 4, minecraft:bow,           	1, 1
+gear, 4, projecte:item.pe_alchemical_bag,           	1, 1
 gear, 4, minecraft:shield,          1, 1
 gear, 4, plants2:crystal_torch,    		2, 4
 gear, 4, iceandfire:stymphalian_arrow,        	2, 6
