--- a/config/DLDungeonsJBG/SpecialChests/oceanic_chests.cfg
+++ b/config/DLDungeonsJBG/SpecialChests/oceanic_chests.cfg
@@ -57,7 +57,7 @@ gear, 3, minecraft:potion,              1,  1, NEYE2
 
 gear, 4, minecraft:iron_sword,   	1, 1
 gear, 4, minecraft:diamond_sword, 	1, 1	
-gear, 4, minecraft:bow,           	1, 1
+gear, 4, projecte:item.pe_alchemical_bag,           	1, 1
 gear, 4, minecraft:shield,          1, 1
 gear, 4, minecraft:iron_helmet,  	1, 1
 gear, 4, minecraft:iron_leggings,  	1, 1
