fixed primaltech GT/Pams flour compatibility

--- a/config/primal_tech.cfg
+++ b/config/primal_tech.cfg
@@ -146,6 +146,7 @@ charcoal {
     S:"Stone Anvil Recipes" <
         minecraft:flint,0,4#primal_tech:flint_block,0
         tconstruct:materials,0,4#tconstruct:seared,0
+		harvestcraft:flouritem,0,1#minecraft:wheat,0
      >
 }
 
