added DE chests to dungeon loot
closes https://github.com/FTBTeam/FTB-Interactions/issues/808

--- a/config/DLDungeonsJBG/SpecialChests/moon.cfg
+++ b/config/DLDungeonsJBG/SpecialChests/moon.cfg
@@ -243,7 +243,7 @@ loot, 5, minecraft:ender_eye,        	1,  2
 loot, 5, minecraft:ender_pearl,        	1,  9
 loot, 5, appliedenergistics2:part(220),        	1,  1
 loot, 5, minecraft:diamond,        	1,  4
-loot, 5, minecraft:emerald,        	1,  4
+loot, 5, draconicevolution:draconium_chest,        	1,  1
 loot, 5, scannable:module_range,	1, 1
 loot, 5, botania:blacklotus, 1, 2
 loot, 5, cyclicmagic:ender_pearl_mounted, 1, 1
