--- a/config/DLDungeonsJBG/SpecialChests/euclydes.cfg
+++ b/config/DLDungeonsJBG/SpecialChests/euclydes.cfg
@@ -216,7 +216,7 @@ loot, 4, minecraft:ender_pearl,        	1,  9
 loot, 4, minecraft:iron_ingot,        	3,  12
 loot, 4, minecraft:gold_ingot,        	2,  5
 loot, 4, minecraft:diamond,        	1,  4
-loot, 4, minecraft:emerald,        	1,  4
+loot, 4, draconicevolution:draconium_chest,        	1,  1
 loot, 4, astralsorcery:blockcustomore 1, 3
 loot, 4, randomthings:itemcollector, 1,	1
 loot, 4, enderio:block_buffer, 1, 1
