removed cluster mill machines
closes https://github.com/FTBTeam/FTB-Interactions/issues/654

--- a/config/gtadditions.cfg
+++ b/config/gtadditions.cfg
@@ -80,7 +80,7 @@ general {
         B:"Should higher tier Chemical Baths be registered?"=true
         B:"Should higher tier Chemical Reactors be registered?"=true
         B:"Should higher tier Circuit Assembling Machines be registered?"=true
-        B:"Should higher tier Cluster Mills be registered?"=true
+        B:"Should higher tier Cluster Mills be registered?"=false
         B:"Should higher tier Compressors be registered?"=true
         B:"Should higher tier Cutting Machines be registered?"=true
         B:"Should higher tier Distilleries be registered?"=true
