add waterbottle tip

--- a/config/tips.cfg
+++ b/config/tips.cfg
@@ -8,6 +8,7 @@ general {
     S:customTips <
 	Exchange your eyes for spider eyes in a robo surgeon for permanent night vision!
 	Dynamic Lighting can be toggled on and off. Check your Key Bindings for more information.
+	Waterbottles don't drain the water source, so using waterbottles to fill up a cauldron/basin then taking that out with a bucket gives you infinite water without having to use ice or a river. 
 	Sponges can provide early Silk Touch on Tinkers tools.
 	Monsters cannot spawn in the void dimension unless summoned.
 	If you're going to use voice chat, don't have push-to-talk and veinmine on the same key.
