import block blacklist for utilmine

--- a/config/ftbultimine.cfg
+++ b/config/ftbultimine.cfg
@@ -3,6 +3,99 @@
 general {
     B:allowHand=true
     S:breakBlacklist <
+        metallurgyAluminium
+        metallurgyApatite
+        metallurgyIron
+        metallurgyPhosphor
+        logWood
+        metallurgyMagnetite
+        metallurgyMagnesite
+        metallurgyCoal
+        metallurgyVinteum
+        metallurgyLignite
+        metallurgyQuartzite
+        oreQuartzBlack
+        metallurgyCertusQuartz
+        astralsorcery:blockcustomore:1
+        astralsorcery:blockcustomore
+        oreAstralStarmetal
+        minecraft:stone
+        minecraft:netherrack
+        minecraft:obsidian
+        metallurgyChalcopyrite
+        metallurgyPyrite
+        metallurgyCopper
+        metallurgyDiamond
+        metallurgyGraphite
+        metallurgyGalena
+        metallurgySilver
+        metallurgyLead
+        metallurgyYellowLimonite
+        metallurgyBrownLimonite
+        metallurgyBandedIron
+        metallurgyMalachite
+        metallurgyGold
+        metallurgyPlatinum
+        metallurgyIridium
+        metallurgyVanadiumMagnetite
+        metallurgyGrossular
+        metallurgySpessartine
+        endstone
+        metallurgyPyrolusite
+        metallurgyTantalite
+        metallurgyNickel
+        metallurgyGarnierite
+        metallurgyCobaltite
+        metallurgyCobalt
+        metallurgyPentlandite
+        metallurgyTetrahedrite
+        metallurgyStibnite
+        metallurgyTin
+        metallurgyCassiterite
+        metallurgyCassiteriteSand
+        metallurgySandCassiterite
+        metallurgyRedstone
+        oreSpodumene
+        metallurgyLepidolite
+        metallurgyGlauconite
+        metallurgyTalc
+        metallurgySoapstone
+        metallurgySphalerite
+        metallurgySulfur
+        metallurgyIlmenite
+        oreBauxite
+        oreBeryllium
+        oreCasserite
+        oreEmerald
+        oreLapis
+        oreAer-Infused
+        oreAqua-Infused
+        oreEntropy-Infused
+        oreOrder-Infused
+        oreIgnis-Infused
+        oreTerra-Infused
+        oreCalcite
+        oreAquaInfused
+        oreOrdoInfused
+        oreEntropyInfused
+        oreTerraInfused
+        oreIgnisInfused
+        oreAerInfused
+        oreSodalite
+        oreOlivine
+        oreBentonite
+        metallurgyNetherQuartz
+        metallurgyRuby
+        metallurgyCinnabar
+        metallurgyIridium
+        oreGreenSapphire
+        metallurgySapphire
+        logMenril
+        hardenedClay
+        coloredTerracotta
+        rftools:dimensional_shard_ore
+        rftools:dimensional_shard_ore:1
+        rftools:dimensional_shard_ore:2
      >
     S:breakWhitelist <
      >
@@ -39,6 +132,7 @@ general {
     # Max: 20
     I:twerkRadius=4
     S:twerkWhitelist <
+		
         gregtech:sapling
         rustic:sapling
         integrateddynamics:menril_sapling
